--- a/Projects/NetCore001/NetCore001/appsettings.json
+++ b/Projects/NetCore001/NetCore001/appsettings.json
@@ -1,8 +1,18 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SERGIOMILLALS; DataBase=netcore; user id=sa;password=milla1329"
-    
+    "DefaultConnection": "Server=SERGIOMILLALS; DataBase=netcore; user id=sa;password=milla1329",
+    "DefaultConnection_azure": "Server=serversm.database.windows.net; DataBase=netcore; user id=sergiomilla;password=Sergioslls1329"
   },
+  "Authentication": {
+    "Facebook:AppId": "555562898235338",
+    "Facebook:AppSecret": "03a49a80ed0d5e8aba6045139c3831a8"
+  },
+
+  "AuthenticationG": {
+    "Google:ClientId": "559780828211-bum5d4ofejvk7rgf723eu66e5tth40q9.apps.googleusercontent.com",
+    "Google:ClientSecret": "YPp8OZ5AzaU0xELJVxiqQsLp"
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
