--- a/Projects/NetCore001/NetCore001/Properties/launchSettings.json
+++ b/Projects/NetCore001/NetCore001/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:10626/",
+      "applicationUrl": "https://localhost:44300/",
       "sslPort": 44300
     }
   },
